fix media and stylesheets links

--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="https://use.typekit.net/cyz5xbz.css%22%3E%3E" />
-    <link rel="stylesheet" href="../Voting Platform/style_voting_platform.css" />
+    <link rel="stylesheet" href="./style.css" />
     <link href="http://fonts.cdnfonts.com/css/soleil" rel="stylesheet">
-    <link rel="icon" href="../media/Logotype_SVG.svg">
-    <link rel=”mask-icon” href=”../media/Logotype_SVG.svg” color='#000000'>
+    <link rel="icon" href="./media/Logotype_SVG.svg">
+    <link rel=”mask-icon” href=”./media/Logotype_SVG.svg” color='#000000'>
     <title>Voting Platform | StreamRaids</title>
     <script src="https://kit.fontawesome.com/1f2a7c4ad4.js" crossorigin="anonymous"></script>
-    <meta 
+    <meta
             name="description"
             content="The streaming platforms are increasing day by day, the pandemic made many people join the streaming community and as a result, we can see the outburst these platforms had in the last months.
             With the outburst, the competition is also increasing, making it hard for new joiners to succeed in the world of streaming. Our goal is to be a life changer for as many small streamers as possible.">
 </head>
-  
+
 <body>
 
     <!-- <div class="side_bar noselect s1-opacity_appear">
@@ -26,7 +26,7 @@
           <li class="side_bar-list-item" id="list_item-PancakeSwap">
             <a class="side_bar-social_media link" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x115a49871f02c522090cb45bbe715db406cafa33" target="_blank">
               <span class="social_media-img_span social_media-span">
-                <img class="social_media-img_pancake social_media-img invert" id="side_bar-pancake_icon" src="../media/pancakeswap.svg" alt="pancakeswap">
+                <img class="social_media-img_pancake social_media-img invert" id="side_bar-pancake_icon" src="./media/pancakeswap.svg" alt="pancakeswap">
               </span>
               <span class="social_media_text_span social_media-span">
                 <p class="social_media-p">PancakeSwap</p>
@@ -36,7 +36,7 @@
           <li class="side_bar-list-item" id="list_item-Twitch">
             <a class="side_bar-social_media link" href="https://www.twitch.tv/streamraidsbsc/" target="_blank">
               <span class="social_media-img_span social_media-span">
-                <img class="social_media-img_twitch social_media-img invert" id="side_bar-twitch_icon" src="../media/twitch.svg" alt="twitch">
+                <img class="social_media-img_twitch social_media-img invert" id="side_bar-twitch_icon" src="./media/twitch.svg" alt="twitch">
               </span>
               <span class="social_media_text_span social_media-span">
                 <p class="social_media-p">Twitch</p>
@@ -46,7 +46,7 @@
           <li class="side_bar-list-item" id="list_item-Youtube">
             <a class="side_bar-social_media link" href="https://www.youtube.com/channel/UCSJgK9usWKYmXQ7BXL0aqEA" target="_blank">
               <span class="social_media-img_span social_media-span">
-                <img class="social_media-img_youtube social_media-img invert" id="side_bar-youtube_icon" src="../media/youtube.svg" alt="youtube">
+                <img class="social_media-img_youtube social_media-img invert" id="side_bar-youtube_icon" src="./media/youtube.svg" alt="youtube">
               </span>
               <span class="social_media_text_span social_media-span">
                 <p class="social_media-p">Youtube</p>
@@ -56,7 +56,7 @@
           <li class="side_bar-list-item" id="list_item-Twitter">
             <a class="side_bar-social_media link" href="https://twitter.com/StreamRaidsBSC" target="_blank">
               <span class="social_media-img_span social_media-span">
-                <img class="social_media-img_twitter social_media-img invert" id="side_bar-twitter_icon" src="../media/twitter.svg" alt="twitter">
+                <img class="social_media-img_twitter social_media-img invert" id="side_bar-twitter_icon" src="./media/twitter.svg" alt="twitter">
               </span>
               <span class="social_media_text_span social_media-span">
                 <p class="social_media-p">Twitter</p>
@@ -66,7 +66,7 @@
           <li class="side_bar-list-item" id="list_item-Telegram">
             <a class="side_bar-social_media link" href="https://t.me/streamraidsbsc" target="_blank">
               <span class="social_media-img_span social_media-span">
-                <img class="social_media-img social_media-img_telegram" id="side_bar-telegram_icon" src="../media/telegram.svg" alt="telegram">
+                <img class="social_media-img social_media-img_telegram" id="side_bar-telegram_icon" src="./media/telegram.svg" alt="telegram">
               </span>
               <span class="social_media_text_span social_media-span">
                 <p class="social_media-p">Telegram</p>
@@ -79,7 +79,7 @@
     <header class="header noselect s1-opacity_appear">
         <div class="logo_div">
           <a class="logo_link link" href="https://poocoin.app/tokens/0x115a49871f02c522090cb45bbe715db406cafa33" target="_blank">
-            <img class ="logo_img" src="../media/Logotype Full SVG.svg" alt="Streamraids Logo">
+            <img class ="logo_img" src="./media/Logotype Full SVG.svg" alt="Streamraids Logo">
           </a>
         </div>
         <nav class="nav_bar">
@@ -90,21 +90,21 @@
         </nav>
         <div class="wallet_div">
           <div class="wallet_div-metamask">
-            <img src="../media/MetaMask_Fox.png" alt="Streamraids Logo">
+            <img src="./media/MetaMask_Fox.png" alt="Streamraids Logo">
             <span id="wallet_address">Wallet Address</span>
           </div>
           <div class="wallet_div-metamask">
-            <img src="../media/Logotype_SVG.svg" alt="Streamraids Logo">
+            <img src="./media/Logotype_SVG.svg" alt="Streamraids Logo">
             <span id="wallet_address">SRT amount</span>
           </div>
         </div>
     </header>
 
     <section id="auth_section">
-      <img src="../media/Background.png" class="background_img" alt="Voting platform background">
+      <img src="./media/Background.png" class="background_img" alt="Voting platform background">
         <div class="auth_section-container">
             <div class="auth_section-div_img">
-                <img class="auth_section-img" src="../media/MetaMask_Fox.png" alt="">
+                <img class="auth_section-img" src="./media/MetaMask_Fox.png" alt="">
             </div>
             <button class="auth_section-button noselect"><p>CONNECT</p></button>
             <p class="auth_section-paragraf">Please connect a wallet to access the voting platform.</p>
@@ -113,7 +113,7 @@
     </section>
 
     <section id="submit_section">
-      <img src="../media/Background.png" class="background_img" alt="Voting platform background">
+      <img src="./media/Background.png" class="background_img" alt="Voting platform background">
         <div class="submit_section-container">
             <div class="common-div">
                 <div class="common-info">
@@ -124,17 +124,17 @@
                     <h3 class="common-last_winner_title">Lorem ipsum dolor sit amet.</h3>
                     <a class="common-last_winner_link" href="">
                         <div class="common-last_winner_img">
-                            <img src="../media/MiquelRomeu.jpg" alt="">
+                            <img src="./media/MiquelRomeu.jpg" alt="">
                         </div>
                         <div id="last_winner_name"><p>Miquelonis6969</p></div>
                         <div class="common-last_winner_external_link">
-                          <img class="invert" src="../media/External_link_font_awesome.svg.png" alt="">
+                          <img class="invert" src="./media/External_link_font_awesome.svg.png" alt="">
                         </div>
                     </a>
                     <div class="common-last_winner_socials">
-                        <a class="common-last_winner_socials_img" href="" target="_blank"><img src="../media/twitch.svg" alt="twitch"></a>
-                        <a class="common-last_winner_socials_img" href="" target="_blank"><img src="../media/youtube.svg" alt="youtube"></a>
-                        <a class="common-last_winner_socials_img" href="" target="_blank"><img src="../media/twitter.svg" alt="twitter"></a>
+                        <a class="common-last_winner_socials_img" href="" target="_blank"><img src="./media/twitch.svg" alt="twitch"></a>
+                        <a class="common-last_winner_socials_img" href="" target="_blank"><img src="./media/youtube.svg" alt="youtube"></a>
+                        <a class="common-last_winner_socials_img" href="" target="_blank"><img src="./media/twitter.svg" alt="twitter"></a>
                     </div>
                 </div>
             </div>
@@ -151,13 +151,13 @@
                     <input id="streamer_links_4" type="text" placeholder="(Enter url here)">
                     <button id="submit" type="submit" value="Submit!">Submit!</button>
                 </form>
-                <div class="common-countdown"></div>                
+                <div class="common-countdown"></div>
             </div>
         </div>
     </section>
 
     <section id="vote_section">
-      <img src="../media/Background.png" class="background_img" alt="Voting platform background">
+      <img src="./media/Background.png" class="background_img" alt="Voting platform background">
         <div class="vote_section-container">
           <div class="common-div">
             <div class="common-info">
@@ -168,17 +168,17 @@
                 <h3 class="common-last_winner_title">Lorem ipsum dolor sit amet.</h3>
                 <a class="common-last_winner_link" href="">
                   <div class="common-last_winner_img">
-                      <img src="../media/MiquelRomeu.jpg" alt="">
+                      <img src="./media/MiquelRomeu.jpg" alt="">
                   </div>
                   <div id="last_winner_name"><p>Miquelonis6969</p></div>
                   <div class="common-last_winner_external_link">
-                      <img class="invert" src="../media/External_link_font_awesome.svg.png" alt="">
+                      <img class="invert" src="./media/External_link_font_awesome.svg.png" alt="">
                   </div>
                 </a>
                 <div class="common-last_winner_socials">
-                    <a class="common-last_winner_socials_img" href="" target="_blank"><img src="../media/twitch.svg" alt="twitch"></a>
-                    <a class="common-last_winner_socials_img" href="" target="_blank"><img src="../media/youtube.svg" alt="youtube"></a>
-                    <a class="common-last_winner_socials_img" href="" target="_blank"><img src="../media/twitter.svg" alt="twitter"></a>
+                    <a class="common-last_winner_socials_img" href="" target="_blank"><img src="./media/twitch.svg" alt="twitch"></a>
+                    <a class="common-last_winner_socials_img" href="" target="_blank"><img src="./media/youtube.svg" alt="youtube"></a>
+                    <a class="common-last_winner_socials_img" href="" target="_blank"><img src="./media/twitter.svg" alt="twitter"></a>
                 </div>
             </div>
         </div>
@@ -194,7 +194,7 @@
                 <h1 class="vote_section-leaderboard_tag_number">#1</h1>
                 <div class="vote_section-leaderboard_tag_streamer">
                   <div class="vote_section-leaderboard_tag_streamer_img">
-                    <img src="../media/MiquelRomeu.jpg" alt="">
+                    <img src="./media/MiquelRomeu.jpg" alt="">
                   </div>
                   <div class="vote_section-leaderboard_tag_streamer_name"><p>Miquelonis6969</p></div>
                   <div class="vote_section-leaderboard_tag_streamer_plus">
@@ -207,7 +207,7 @@
                 <h1 class="vote_section-leaderboard_tag_number">#1</h1>
                 <div class="vote_section-leaderboard_tag_streamer">
                   <div class="vote_section-leaderboard_tag_streamer_img">
-                    <img src="../media/MiquelRomeu.jpg" alt="">
+                    <img src="./media/MiquelRomeu.jpg" alt="">
                   </div>
                   <div class="vote_section-leaderboard_tag_streamer_name"><p>Miquelonis6969</p></div>
                   <div class="vote_section-leaderboard_tag_streamer_plus">
@@ -220,7 +220,7 @@
                 <h1 class="vote_section-leaderboard_tag_number">#1</h1>
                 <div class="vote_section-leaderboard_tag_streamer">
                   <div class="vote_section-leaderboard_tag_streamer_img">
-                    <img src="../media/MiquelRomeu.jpg" alt="">
+                    <img src="./media/MiquelRomeu.jpg" alt="">
                   </div>
                   <div class="vote_section-leaderboard_tag_streamer_name"><p>Miquelonis6969</p></div>
                   <div class="vote_section-leaderboard_tag_streamer_plus">
@@ -233,7 +233,7 @@
                 <h1 class="vote_section-leaderboard_tag_number">#1</h1>
                 <div class="vote_section-leaderboard_tag_streamer">
                   <div class="vote_section-leaderboard_tag_streamer_img">
-                    <img src="../media/MiquelRomeu.jpg" alt="">
+                    <img src="./media/MiquelRomeu.jpg" alt="">
                   </div>
                   <div class="vote_section-leaderboard_tag_streamer_name"><p>Miquelonis6969</p></div>
                   <div class="vote_section-leaderboard_tag_streamer_plus">
@@ -246,7 +246,7 @@
                 <h1 class="vote_section-leaderboard_tag_number">#1</h1>
                 <div class="vote_section-leaderboard_tag_streamer">
                   <div class="vote_section-leaderboard_tag_streamer_img">
-                    <img src="../media/MiquelRomeu.jpg" alt="">
+                    <img src="./media/MiquelRomeu.jpg" alt="">
                   </div>
                   <div class="vote_section-leaderboard_tag_streamer_name"><p>Miquelonis6969</p></div>
                   <div class="vote_section-leaderboard_tag_streamer_plus">
@@ -260,7 +260,7 @@
               <div class="vote_section-list_overflow">
                 <div class="vote_section-list_tag_streamer">
                   <div class="vote_section-list_tag_streamer_img">
-                    <img src="../media/MiquelRomeu.jpg" alt="">
+                    <img src="./media/MiquelRomeu.jpg" alt="">
                   </div>
                   <div class="vote_section-list_tag_streamer_name"><p>Miquelonis6969</p></div>
                   <div class="vote_section-list_tag_streamer_plus">
@@ -270,7 +270,7 @@
                 <!--  -->
                 <div class="vote_section-list_tag_streamer">
                   <div class="vote_section-list_tag_streamer_img">
-                    <img src="../media/MiquelRomeu.jpg" alt="">
+                    <img src="./media/MiquelRomeu.jpg" alt="">
                   </div>
                   <div class="vote_section-list_tag_streamer_name"><p>Miquelonis6969</p></div>
                   <div class="vote_section-list_tag_streamer_plus">
@@ -280,7 +280,7 @@
                 <!--  -->
                 <div class="vote_section-list_tag_streamer">
                   <div class="vote_section-list_tag_streamer_img">
-                    <img src="../media/MiquelRomeu.jpg" alt="">
+                    <img src="./media/MiquelRomeu.jpg" alt="">
                   </div>
                   <div class="vote_section-list_tag_streamer_name"><p>Miquelonis6969</p></div>
                   <div class="vote_section-list_tag_streamer_plus">
@@ -290,7 +290,7 @@
                 <!--  -->
                 <div class="vote_section-list_tag_streamer">
                   <div class="vote_section-list_tag_streamer_img">
-                    <img src="../media/MiquelRomeu.jpg" alt="">
+                    <img src="./media/MiquelRomeu.jpg" alt="">
                   </div>
                   <div class="vote_section-list_tag_streamer_name"><p>Miquelonis6969</p></div>
                   <div class="vote_section-list_tag_streamer_plus">
@@ -300,7 +300,7 @@
                 <!--  -->
                 <div class="vote_section-list_tag_streamer">
                   <div class="vote_section-list_tag_streamer_img">
-                    <img src="../media/MiquelRomeu.jpg" alt="">
+                    <img src="./media/MiquelRomeu.jpg" alt="">
                   </div>
                   <div class="vote_section-list_tag_streamer_name"><p>Miquelonis6969</p></div>
                   <div class="vote_section-list_tag_streamer_plus">
@@ -311,19 +311,19 @@
               </div>
             </div>
           </div>
-          <div class="common-countdown"></div>                
+          <div class="common-countdown"></div>
         </div>
         </div>
     </section>
-    
+
     <footer>
         <div class="foot-div foot-div-social noselect" id="foot-info">
           <div class="foot-info_socials">
-            <a class="foot-info_socials_img" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x115a49871f02c522090cb45bbe715db406cafa33" target="_blank"><img class="invert" src="../media/pancakeswap.svg" alt="pancakeswap"></a>
-            <a class="foot-info_socials_img" href="https://www.twitch.tv/streamraidsbsc/" target="_blank"><img class="invert" src="../media/twitch.svg" alt="twitch"></a>
-            <a class="foot-info_socials_img" href="https://www.youtube.com/channel/UCSJgK9usWKYmXQ7BXL0aqEA" target="_blank"><img class="invert" src="../media/youtube.svg" alt="youtube"></a>
-            <a class="foot-info_socials_img" href="https://twitter.com/StreamRaidsBSC" target="_blank"><img class="invert" src="../media/twitter.svg" alt="twitter"></a>
-            <a class="foot-info_socials_img" href="https://t.me/streamraidsbsc" target="_blank"><img src="../media/telegram.svg" alt="telegram"></a>
+            <a class="foot-info_socials_img" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x115a49871f02c522090cb45bbe715db406cafa33" target="_blank"><img class="invert" src="./media/pancakeswap.svg" alt="pancakeswap"></a>
+            <a class="foot-info_socials_img" href="https://www.twitch.tv/streamraidsbsc/" target="_blank"><img class="invert" src="./media/twitch.svg" alt="twitch"></a>
+            <a class="foot-info_socials_img" href="https://www.youtube.com/channel/UCSJgK9usWKYmXQ7BXL0aqEA" target="_blank"><img class="invert" src="./media/youtube.svg" alt="youtube"></a>
+            <a class="foot-info_socials_img" href="https://twitter.com/StreamRaidsBSC" target="_blank"><img class="invert" src="./media/twitter.svg" alt="twitter"></a>
+            <a class="foot-info_socials_img" href="https://t.me/streamraidsbsc" target="_blank"><img src="./media/telegram.svg" alt="telegram"></a>
           </div>
         </div>
         <div class="foot-div noselect">
@@ -337,7 +337,7 @@
         </div>
     </footer>
 
-    
-    <script src="../Voting Platform/app_voting_platform.js"></script>
+
+    <script src="./app_voting_platform.js"></script>
 </body>
 </html>
