add metamask connection

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </div>
           <div class="wallet_div-metamask">
             <img src="./media/Logotype_SVG.svg" alt="Streamraids Logo">
-            <span id="wallet_address">SRT amount</span>
+            <span id="srt_amount">SRT amount</span>
           </div>
         </div>
     </header>
@@ -50,7 +50,7 @@
             <div class="auth_section-div_img">
                 <img class="auth_section-img" src="./media/MetaMask_Fox.png" alt="">
             </div>
-            <button class="auth_section-button noselect" id="enableMetamask"><p>CONNECT</p></button>
+            <button class="auth_section-button noselect" id="enableMetamask"><p id="connect_label">CONNECT</p></button>
 
             <p class="auth_section-paragraf">Please connect a wallet to access the voting platform.</p>
             <p class="auth_section-paragraf">Remember, you need to be holding $SRT to vote!</p>
