replace lorem ipsum on submission page

--- a/index.html
+++ b/index.html
@@ -62,24 +62,25 @@
         <div class="submit_section-container">
             <div class="common-div">
                 <div class="common-info">
-                    <h3 class="common-info_title">Lorem ipsum dolor sit amet.</h3>
-                    <p class="common-info_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus non quos beatae sed sunt unde voluptatem reiciendis recusandae esse provident quas, consequatur repudiandae dolores fugit id eos! Praesentium ut maiores consectetur sapiente dolore quia impedit harum et dolores tempora voluptates reprehenderit, cum id recusandae inventore ipsam odit iusto veritatis itaque totam ratione in maxime dolorem quas? Accusamus similique ipsum non voluptas blanditiis, vel temporibus necessitatibus quam quasi quo modi quisquam excepturi reprehenderit? Consectetur veritatis magnam nam, nemo quidem consequuntur perspiciatis accusamus sit ex. Delectus, totam incidunt harum asperiores odio obcaecati quam dolores libero ullam, earum minima cum atque quasi dolor.</p>
+                    <h3 class="common-info_title">Welcome to the Voting Platform!</h3>
+                    <p class="common-info_text">The voting system starts with the entry phase, allowing you to put forward your favourite streamers for the dev team to process into voting.</p>
+                    <p class="common-info_text">When the voting platform is open you would be able to vote for your favourite streamers and keep track of the leaderboards in the run up to the weekend.</p>
                 </div>
                 <div class="common-last_winner">
-                    <h3 class="common-last_winner_title">Lorem ipsum dolor sit amet.</h3>
+                    <h3 class="common-last_winner_title">Promoted streamer.</h3>
                     <a class="common-last_winner_link" href="">
                         <div class="common-last_winner_img">
-                            <img src="./media/MiquelRomeu.jpg" alt="">
+                            <img src="./media/MauiCreative_Logo.png" alt="">
                         </div>
-                        <div id="last_winner_name"><p>Miquelonis6969</p></div>
+                        <div id="last_winner_name"><p>MAUI CRTV</p></div>
                         <div class="common-last_winner_external_link">
                           <img class="invert" src="./media/External_link_font_awesome.svg.png" alt="">
                         </div>
                     </a>
                     <div class="common-last_winner_socials">
-                        <a class="common-last_winner_socials_img" href="" target="_blank"><img src="./media/twitch.svg" alt="twitch"></a>
-                        <a class="common-last_winner_socials_img" href="" target="_blank"><img src="./media/youtube.svg" alt="youtube"></a>
-                        <a class="common-last_winner_socials_img" href="" target="_blank"><img src="./media/twitter.svg" alt="twitter"></a>
+                        <a class="common-last_winner_socials_img" href="https://www.twitch.tv/mauicrtv" target="_blank"><img src="./media/twitch.svg" alt="twitch"></a>
+                        <a class="common-last_winner_socials_img" href="https://www.youtube.com/mauicrtv" target="_blank"><img src="./media/youtube.svg" alt="youtube"></a>
+                        <a class="common-last_winner_socials_img" href="https://twitter.com/mauicrtv" target="_blank"><img src="./media/twitter.svg" alt="twitter"></a>
                     </div>
                 </div>
             </div>
