add loader on submission waiting for async request to be done

--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
                     <h2>Streamer's Social Links</h2>
                     <input id="youtube_url" type="text" placeholder="(Enter youtube url here)">
                     <input id="twitter_url" type="text" placeholder="(Enter twitter url here)">
-                    <button type="button" value="Submit!" onclick="submit_streamer()">Submit!</button>
+                    <button type="button" value="Submit!" onclick="submit_streamer()" id="submit_vote_button">Submit!</button>
+                    <div class="loader" id="wait_loader"></div>
                 </form>
                 <div class="common-countdown"></div>
             </div>
